WexGit/Wex_DX/force-app/main/default/objects/Campaign_Billable_Event__c/Campaign_Billable_Event__c.object-meta.xml
<CustomObject>
    <label>Campaign Billable Event</label>
    <nameField>
        <displayFormat>CBE{00000000}</displayFormat>
        <label>Campaign Billable Events Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Billable Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>