WexGit/Wex_DX/force-app/main/default/objects/Campaign_Billable_Event__c/fields/Billable_Cost__c.field-meta.xml
<CustomField>
    <fullName>Billable_Cost__c</fullName>
    <formula>Cost__c + ( Cost__c * Margin__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billable Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>