WexGit/Wex_DX/force-app/main/default/objects/Campaign_Billable_Event__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign Billable Events</relationshipLabel>
    <relationshipName>Campaign_Billable_Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>