WexGit/Wex_DX/force-app/main/default/objects/Campaign_Billable_Event__c/fields/Campaign_Coupon_Code__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Coupon_Code__c</fullName>
    <formula>Campaign__r.Coupon_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Coupon Code</label>
    <type>Text</type>
</CustomField>