WexGit/Wex_DX/force-app/main/default/objects/Campaign_Billable_Event__c/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cost Center</label>
    <length>10</length>
    <type>Text</type>
</CustomField>