WexGit/Wex_DX/force-app/main/default/objects/Campaign_Billable_Event__c/fields/Cost_Piece__c.field-meta.xml
<CustomField>
    <fullName>Cost_Piece__c</fullName>
    <label>Cost/Piece</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>