WexGit/Wex_DX/force-app/main/default/objects/Campaign_Billable_Event__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>App Brochure</fullName>
            </value>
            <value>
                <fullName>Collateral Design</fullName>
            </value>
            <value>
                <fullName>Collateral Production</fullName>
            </value>
            <value>
                <fullName>Customer Communications</fullName>
            </value>
            <value>
                <fullName>Data Analysis</fullName>
            </value>
            <value>
                <fullName>Data Records</fullName>
            </value>
            <value>
                <fullName>Demos</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Driver Videos</fullName>
            </value>
            <value>
                <fullName>Drivers Guides</fullName>
            </value>
            <value>
                <fullName>Envelopes</fullName>
            </value>
            <value>
                <fullName>Fulfillment Collateral</fullName>
            </value>
            <value>
                <fullName>Graphic Design</fullName>
            </value>
            <value>
                <fullName>Inserts</fullName>
            </value>
            <value>
                <fullName>Lead handling</fullName>
            </value>
            <value>
                <fullName>Letterhead</fullName>
            </value>
            <value>
                <fullName>List Modeling</fullName>
            </value>
            <value>
                <fullName>Logos</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Newsletters</fullName>
            </value>
            <value>
                <fullName>Plastic</fullName>
            </value>
            <value>
                <fullName>Plastic Design</fullName>
            </value>
            <value>
                <fullName>Plastic Production</fullName>
            </value>
            <value>
                <fullName>Press Releases</fullName>
            </value>
            <value>
                <fullName>Printing</fullName>
            </value>
            <value>
                <fullName>Product Collateral</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Sales Sheets</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>